Implement oidc login

--- a/main.templ
+++ b/main.templ
@@ -29,6 +29,7 @@ templ index(user *User) {
 				<input type="text" name="kthid" placeholder="KTH ID"/>
 				<button>login with passkey</button>
 			</form>
+			<a href="/login/oidc/kth">login with kth</a>
 		} else {
 			<a href="/logout">logout</a>
 		}
