--- a/services/passkey/passkey.templ
+++ b/services/passkey/passkey.templ
@@ -1,86 +1,12 @@
-package main
+package passkey
 
 import (
 	"github.com/go-webauthn/webauthn/protocol"
+	"github.com/datasektionen/logout/pkg/templates"
 )
 
-templ layout() {
-	<!DOCTYPE html>
-	<html>
-		<head>
-			<title>Logout</title>
-		</head>
-		<body>
-			{ children... }
-		</body>
-	</html>
-}
-
-templ index(user *User) {
-	@layout() {
-		<h1>Logout</h1>
-		if user == nil {
-			<section style="display: flex; gap: 1em; align-items: baseline">
-				<h2>Dev:</h2>
-				<a href="/register">register</a>
-				<a href="/login/dev">login by username</a>
-			</section>
-			<form method="get" action="/login/passkey">
-				<input type="text" name="kthid" placeholder="KTH ID"/>
-				<button>login with passkey</button>
-			</form>
-			<a href="/login/oidc/kth">login with kth</a>
-		} else {
-			<a href="/logout">logout</a>
-		}
-	}
-}
-
-templ account(user User) {
-	@layout() {
-		<h1>Logout</h1>
-		<a href="/logout">logout</a>
-		<p>Hello there, { user.KTHID }</p>
-		<section>
-			<h2>Passkeys:</h2>
-			<ul>
-				for _, passkey := range user.Passkeys {
-					<li style="display: flex; gap: 0.5em">
-						<span>{ passkey.Name }</span>
-						<form method="post" action="/passkey/remove">
-							<input type="hidden" name="passkey-id" value={ passkey.ID.String() }/>
-							<button>x</button>
-						</form>
-					</li>
-				}
-			</ul>
-			<a href="/passkey/add">add passkey</a>
-		</section>
-	}
-}
-
-templ register() {
-	@layout() {
-		<form method="post" action="/register">
-			<label for="kthid">KTH-ID:</label>
-			<input id="kthid" name="kthid" type="text"/>
-			<button>Register</button>
-		</form>
-	}
-}
-
-templ loginDev() {
-	@layout() {
-		<form method="post" action="/login/dev">
-			<label for="kthid">KTH-ID:</label>
-			<input id="kthid" name="kthid" type="text"/>
-			<button>Login</button>
-		</form>
-	}
-}
-
-templ loginPasskey(ca *protocol.CredentialAssertion) {
-	@layout() {
+templ LoginPasskey(ca *protocol.CredentialAssertion) {
+	@templates.Layout() {
 		@templ.JSONScript("credential-assertion", ca)
 		@base64ArrayBufferScript()
 		<script type="module">
@@ -116,8 +42,8 @@ templ loginPasskey(ca *protocol.CredentialAssertion) {
 	}
 }
 
-templ addPasskey(cc *protocol.CredentialCreation) {
-	@layout() {
+templ AddPasskey(cc *protocol.CredentialCreation) {
+	@templates.Layout() {
 		<form onsubmit="addPasskey(event)">
 			<input id="passkey-name" placeholder="passkey name" name="name" type="text"/>
 			<button>Add</button>
@@ -167,55 +93,55 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 */
 
 function base64ArrayBuffer(arrayBuffer) {
-  var base64    = ''
-  var encodings = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/'
+	var base64    = ''
+	var encodings = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/'
 
-  var bytes         = new Uint8Array(arrayBuffer)
-  var byteLength    = bytes.byteLength
-  var byteRemainder = byteLength % 3
-  var mainLength    = byteLength - byteRemainder
+	var bytes         = new Uint8Array(arrayBuffer)
+	var byteLength    = bytes.byteLength
+	var byteRemainder = byteLength % 3
+	var mainLength    = byteLength - byteRemainder
 
-  var a, b, c, d
-  var chunk
+	var a, b, c, d
+	var chunk
 
-  // Main loop deals with bytes in chunks of 3
-  for (var i = 0; i < mainLength; i = i + 3) {
-    // Combine the three bytes into a single integer
-    chunk = (bytes[i] << 16) | (bytes[i + 1] << 8) | bytes[i + 2]
+	// Main loop deals with bytes in chunks of 3
+	for (var i = 0; i < mainLength; i = i + 3) {
+		// Combine the three bytes into a single integer
+		chunk = (bytes[i] << 16) | (bytes[i + 1] << 8) | bytes[i + 2]
 
-    // Use bitmasks to extract 6-bit segments from the triplet
-    a = (chunk & 16515072) >> 18 // 16515072 = (2^6 - 1) << 18
-    b = (chunk & 258048)   >> 12 // 258048   = (2^6 - 1) << 12
-    c = (chunk & 4032)     >>  6 // 4032     = (2^6 - 1) << 6
-    d = chunk & 63               // 63       = 2^6 - 1
+		// Use bitmasks to extract 6-bit segments from the triplet
+		a = (chunk & 16515072) >> 18 // 16515072 = (2^6 - 1) << 18
+		b = (chunk & 258048)   >> 12 // 258048   = (2^6 - 1) << 12
+		c = (chunk & 4032)     >>  6 // 4032     = (2^6 - 1) << 6
+		d = chunk & 63               // 63       = 2^6 - 1
 
-    // Convert the raw binary segments to the appropriate ASCII encoding
-    base64 += encodings[a] + encodings[b] + encodings[c] + encodings[d]
-  }
+		// Convert the raw binary segments to the appropriate ASCII encoding
+		base64 += encodings[a] + encodings[b] + encodings[c] + encodings[d]
+	}
 
-  // Deal with the remaining bytes and padding
-  if (byteRemainder == 1) {
-    chunk = bytes[mainLength]
+	// Deal with the remaining bytes and padding
+	if (byteRemainder == 1) {
+		chunk = bytes[mainLength]
 
-    a = (chunk & 252) >> 2 // 252 = (2^6 - 1) << 2
+		a = (chunk & 252) >> 2 // 252 = (2^6 - 1) << 2
 
-    // Set the 4 least significant bits to zero
-    b = (chunk & 3)   << 4 // 3   = 2^2 - 1
+		// Set the 4 least significant bits to zero
+		b = (chunk & 3)   << 4 // 3   = 2^2 - 1
 
-    base64 += encodings[a] + encodings[b] + '=='
-  } else if (byteRemainder == 2) {
-    chunk = (bytes[mainLength] << 8) | bytes[mainLength + 1]
+		base64 += encodings[a] + encodings[b] + '=='
+	} else if (byteRemainder == 2) {
+		chunk = (bytes[mainLength] << 8) | bytes[mainLength + 1]
 
-    a = (chunk & 64512) >> 10 // 64512 = (2^6 - 1) << 10
-    b = (chunk & 1008)  >>  4 // 1008  = (2^6 - 1) << 4
+		a = (chunk & 64512) >> 10 // 64512 = (2^6 - 1) << 10
+		b = (chunk & 1008)  >>  4 // 1008  = (2^6 - 1) << 4
 
-    // Set the 2 least significant bits to zero
-    c = (chunk & 15)    <<  2 // 15    = 2^4 - 1
+		// Set the 2 least significant bits to zero
+		c = (chunk & 15)    <<  2 // 15    = 2^4 - 1
 
-    base64 += encodings[a] + encodings[b] + encodings[c] + '='
-  }
-  
-  return base64
+		base64 += encodings[a] + encodings[b] + encodings[c] + '='
+	}
+	
+	return base64
 }
 	</script>
 }
