Implement the legacy (login{,2}) API

--- a/services/passkey/passkey.templ
+++ b/services/passkey/passkey.templ
@@ -37,7 +37,7 @@ templ LoginPasskey(ca *protocol.CredentialAssertion) {
 					},
 				}),
 			});
-			if (res.status == 200) window.location = "/account";
+			if (res.status == 200) window.location = "/";
 		</script>
 	}
 }
