--- a/pkg/templates/layout.templ
+++ b/pkg/templates/layout.templ
@@ -2,9 +2,12 @@ package templates
 
 templ Layout() {
 	<!DOCTYPE html>
-	<html>
+	<html lang="en">
 		<head>
+			<meta charset="UTF-8"/>
+			<meta name="viewport" content="width=device-width, initial-scale=1"/>
 			<title>Logout</title>
+			<link rel="stylesheet" href="/static/style.css"/>
 		</head>
 		<body>
 			{ children... }
