Make some stuff private

--- a/services/passkey/passkey.templ
+++ b/services/passkey/passkey.templ
@@ -4,7 +4,7 @@ import (
 	"github.com/datasektionen/logout/services/passkey/export"
 )
 
-templ LoginForm() {
+templ loginForm() {
 	<form class="w-full" id="passkey-login">
 		<label class="small" for="pk-kthid">Log In using a Passkey</label>
 		<div class="row">
