--- a/services/user/user.templ
+++ b/services/user/user.templ
@@ -5,7 +5,7 @@ import (
 	"github.com/datasektionen/logout/services/user/export"
 )
 
-templ Index(passkeyLogin, devLogin func() templ.Component) {
+templ index(passkeyLogin, devLogin func() templ.Component) {
 	@templates.Layout() {
 		<div class="page-center-container">
 			<main>
@@ -20,7 +20,7 @@ templ Index(passkeyLogin, devLogin func() templ.Component) {
 	}
 }
 
-templ Account(user export.User, passkeySettings templ.Component) {
+templ account(user export.User, passkeySettings templ.Component) {
 	@templates.Layout() {
 		<div class="page-center-container">
 			<main>
