--- a/pkg/templates/layout.templ
+++ b/pkg/templates/layout.templ
@@ -7,7 +7,7 @@ templ Layout() {
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1"/>
 			<title>Logout</title>
-			<link rel="stylesheet" href="/static/style.css"/>
+			<link rel="stylesheet" href="/public/style.css"/>
 		</head>
 		<body>
 			{ children... }
