--- a/services/user/user.templ
+++ b/services/user/user.templ
@@ -6,34 +6,42 @@ import (
 )
 
 templ index(devLogin func() templ.Component) {
-	@templates.Layout() {
-		<div class="page-center-container">
-			<main>
-				<div class="col">
-					<img class="shield" src="/public/skold_vit.svg"/>
-					<a autofocus class="wide-button" href="/login/oidc/kth">Log In with KTH</a>
-					<div id="passkey-login" class="w-full" style="min-height: 51px"></div>
-					<script type="module" src="/dist/passkeyLogin.island.js"></script>
-					@devLogin()
-				</div>
-			</main>
+	@templates.Modal() {
+		<div class="p-8 flex flex-col gap-4">
+			<img class="h-40 pb-4 block" src="/public/skold_vit.svg"/>
+			<a
+				autofocus
+				href="/login/oidc/kth"
+				class="
+					bg-[#3f4c66] p-1.5 block rounded border text-center
+					select-none border-transparent outline-none
+					focus:border-cerise-strong hover:border-cerise-light
+				"
+			>Log In with KTH</a>
+			<div id="passkey-login" style="min-height: 62px"></div>
+			<script type="module" src="/dist/passkeyLogin.island.js"></script>
+			@devLogin()
 		</div>
 	}
 }
 
 templ account(user export.User) {
-	@templates.Layout() {
-		<div class="page-center-container">
-			<main>
-				<div class="col">
-					<div class="row w-full items-center">
-						<p class="basis-full">{ user.FirstName } { user.Surname } ({ user.KTHID })</p>
-						<a class="round-button" href="/logout" title="Log out"><img src="/public/log-out.svg"/></a>
-					</div>
-					<div id="passkey-settings" class="w-full"></div>
-					<script type="module" src="/dist/passkeySettings.island.js"></script>
-				</div>
-			</main>
+	@templates.Modal() {
+		<div class="p-8 flex flex-col gap-4">
+			<div class="flex gap-2 items-center">
+				<p class="basis-full">{ user.FirstName } { user.Surname } ({ user.KTHID })</p>
+				<a
+					href="/logout"
+					title="Log out"
+					class="
+						bg-[#3f4c66] shrink-0 h-8 w-8 rounded-full
+						grid place-items-center pointer
+						border border-transparent outline-none focus:border-cerise-strong hover:border-cerise-light relative
+					"
+				><img class="w-3/5 h-3/5 invert" src="/public/log-out.svg"/></a>
+			</div>
+			<div id="passkey-settings" class="w-full"></div>
+			<script type="module" src="/dist/passkeySettings.island.js"></script>
 		</div>
 	}
 }
