--- a/services/user/user.templ
+++ b/services/user/user.templ
@@ -29,7 +29,7 @@ templ account(user export.User) {
 	@templates.Modal() {
 		<div class="p-8 flex flex-col gap-4">
 			<div class="flex gap-2 items-center">
-				<p class="basis-full">{ user.FirstName } { user.Surname } ({ user.KTHID })</p>
+				<p class="basis-full">{ user.FirstName } { user.FamilyName } ({ user.KTHID })</p>
 				<a
 					href="/logout"
 					title="Log out"
