--- a/style.css
+++ b/style.css
@@ -24,3 +24,79 @@
         transform: rotate(360deg);
     }
 }
+
+@layer base {
+    html {
+        font-family: lato, sans-serif;
+    }
+}
+
+@font-face {
+    font-family: lato;
+    font-style: normal;
+    font-weight: 100;
+    src: url('/public/fonts/Lato-Thin.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: lato;
+    font-style: normal;
+    font-weight: 300;
+    src: url('/public/fonts/Lato-Light.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: lato;
+    font-style: normal;
+    font-weight: 400;
+    src: url('/public/fonts/Lato-Regular.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: lato;
+    font-style: normal;
+    font-weight: 700;
+    src: url('/public/fonts/Lato-Bold.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: lato;
+    font-style: normal;
+    font-weight: 900;
+    src: url('/public/fonts/Lato-Black.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: lato;
+    font-style: italic;
+    font-weight: 100;
+    src: url('/public/fonts/Lato-ThinItalic.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: lato;
+    font-style: italic;
+    font-weight: 300;
+    src: url('/public/fonts/Lato-LightItalic.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: lato;
+    font-style: italic;
+    font-weight: 400;
+    src: url('/public/fonts/Lato-Italic.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: lato;
+    font-style: italic;
+    font-weight: 700;
+    src: url('/public/fonts/Lato-BoldItalic.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: lato;
+    font-style: italic;
+    font-weight: 900;
+    src: url('/public/fonts/Lato-BlackItalic.ttf') format('truetype');
+}
