Run formatter on all templ files

--- a/services/dev/dev.templ
+++ b/services/dev/dev.templ
@@ -16,14 +16,18 @@ templ loginForm() {
 					bg-slate-800 p-1.5 rounded h-8
 				"
 			/>
-			<button class="
-				bg-[#3f4c66] shrink-0 h-8 w-8 rounded-full
-				grid place-items-center pointer
-				border border-transparent outline-none focus:border-cerise-strong hover:border-cerise-light
-			"><img
-				src="/public/emergency-exit.svg"
-				class="w-3/5 h-3/5 invert"
-			/></button>
+			<button
+				class="
+					bg-[#3f4c66] shrink-0 h-8 w-8 rounded-full
+					grid place-items-center pointer
+					border border-transparent outline-none focus:border-cerise-strong hover:border-cerise-light
+				"
+			>
+				<img
+					src="/public/emergency-exit.svg"
+					class="w-3/5 h-3/5 invert"
+				/>
+			</button>
 		</div>
 	</form>
 }
