--- a/pkg/templates/layout.templ
+++ b/pkg/templates/layout.templ
@@ -9,9 +9,10 @@ templ Page() {
 			<title>Logout</title>
 			<link rel="stylesheet" href="/dist/style.css"/>
 			<script src="https://unpkg.com/htmx.org@2.0.1" integrity="sha384-QWGpdj554B4ETpJJC9z+ZHJcA/i59TyjxEPXiiUgN2WmTyV5OEZWCD6gQhgkdpB/" crossorigin="anonymous"></script>
+			<script src="/public/hx-clone.js"></script>
 			@base64Helpers()
 		</head>
-		<body class="bg-gray-900 text-neutral-100">
+		<body class="bg-gray-900 text-neutral-100" hx-ext="clone">
 			{ children... }
 		</body>
 	</html>
