--- a/services/admin/admin.templ
+++ b/services/admin/admin.templ
@@ -1,6 +1,7 @@
 package admin
 
 import (
+	"fmt"
 	"github.com/datasektionen/logout/pkg/templates"
 	"github.com/datasektionen/logout/services/static"
 )
@@ -12,10 +13,59 @@ templ admin() {
 templ members() {
 	@page() {
 		<div class="p-8">
-			<div id="membership-upload"></div>
-			<script type="module" src="/dist/membershipUpload.island.js"></script>
+			@uploadForm()
+			@uploadStatus(false)
 		</div>
 	}
+}
+
+templ uploadForm() {
+	<form
+		class="flex flex-col gap-2 p-2"
+		hx-post="/admin/members/upload-sheet"
+		hx-encoding="multipart/form-data"
+		hx-swap="outerHTML"
+		hx-target="#upload-status"
+	>
+		<div class="flex gap-2">
+			<input
+				name="sheet"
+				type="file"
+				required
+				class="
+					bg-[#3f4c66] rounded p-1 grid place-items-center pointer w-full
+					border border-transparent outline-none focus:border-cerise-strong hover:border-cerise-light relative
+				"
+			/>
+			<button
+				class={ button + "h-auto" }
+			>Upload</button>
+		</div>
+	</form>
+}
+
+templ uploadStatus(withStuff bool) {
+	if withStuff {
+		<div
+			id="upload-status"
+			class="w-full"
+			hx-ext="sse"
+			sse-connect="/admin/members/upload-sheet"
+		>
+			<div sse-swap="progress" hx-swap="innerHTML" class="w-full h-1 bg-white"></div>
+			<div class="flex flex-col gap-2 pt-2" sse-swap="message" hx-swap="beforeend"></div>
+		</div>
+	} else {
+		<div id="upload-status"></div>
+	}
+}
+
+templ uploadProgress(progress float64) {
+	<div class="bg-cerise-regular h-full" { templ.Attributes{"style": fmt.Sprint("width: ", progress * 100, "%")}... }></div>
+}
+
+templ uploadMessage(message string, isErr bool) {
+	<p class={ "p-2 rounded " + templates.BigIfTrue(isErr, "bg-red-600/50", "bg-green-600/50") }>{ message }</p>
 }
 
 templ page() {
