Disallow empty (undeletable) redirect URIs

--- a/services/admin/oidc_clients.templ
+++ b/services/admin/oidc_clients.templ
@@ -51,6 +51,7 @@ templ oidcClient(client database.OidcClient, secret []byte) {
 					<input
 						type="text"
 						name="redirect-uri"
+						required
 						class={ input }
 						autofocus
 					/>
